--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
     working_dir: /app
     volumes:
       - ./catalog_service/catalog_service:/app
-    command: /bin/sh -c "pip install -r requirements.txt && pip install psycopg2-binary && python run_servers.py runserver 0.0.0.0:8002"
+    command: /bin/sh -c "pip install -r requirements.txt && pip install psycopg2-binary && python manage.py migrate && python run_servers.py runserver 0.0.0.0:8002"
     ports:
       - '8002:8002'
     environment:
@@ -68,6 +68,8 @@ services:
       DB_PORT: '5432'
       REDIS_URL: redis://redis:6379
       INVENTORY_HTTP_BASE: http://inventory:8003
+      GATEWAY_BASE_URL: http://localhost:8000
+      CLOUDINARY_URL: cloudinary://596853172373879:w8wejdD73_llcHYwxoLs9y5KrGw@dbpcqezob
     depends_on:
       - postgres
       - redis
